crates/tui/src/app/snapshots/tui__app__items__tests__completed_job_body.snap
---
source: crates/tui/src/app/items_tests.rs
expression: "rows.join(\"\\n\")"
---
fix the parser
fix the parser › ▸ build the workspace                                         ✕
▣ completed · harness — · model — · — · 5s · session —
Output since this terminal attached · /tmp/out
done















▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
$0.00
