crates/tui/src/app/snapshots/tui__app__items__tests__ordinary_job_tail.snap
---
source: crates/tui/src/app/items_tests.rs
expression: "rows.join(\"\\n\")"
---
fix the parser › ▸ build the workspace                                         ✕
⠋ running · harness — · model — · — · 11s · session — · ■ stop
Output since this terminal attached · /tmp/out
compiling one
compiling two
done













▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
$0.00
1 job running
