crates/tui/src/app/snapshots/tui__app__items__tests__running_tty_job_screen.snap
---
source: crates/tui/src/app/items_tests.rs
expression: "rows.join(\"\\n\")"
---
fix the parser
fix the parser › ▸ run the editor                                              ✕
⠋ running · harness — · model — · — · 11s · session — · ■ stop
Output since this terminal attached · /tmp/out
$ edit file.txt














▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
$0.00
1 job running
